# bulk-email-sender

./: .gitignore  README.md  default_config.toml  pyproject.toml
input/: names_example.csv
src/: config.py  emailer.py  letter.py  main.py
